# waffles.space

./: .travis.yml  Dockerfile  LICENSE  README.md  eigen-meta.json  setup.sh
.github/workflows/: build-and-push.yml
deploy/: README.md
deploy/nginx/: default.conf  setup.sh
kubernetes/: config.json  setup-nodes.py
kubernetes-digitalocean/: README.md
nginx/: default.conf  nginx.conf
scripts/: check.sh  restart.sh  setup.sh  start.sh  watch.sh
scripts/callbacks/: Dockerfile  requirements.txt
scripts/callbacks/src/: listener.py  skype.py
scripts/coreos-systemd/: README.md  boot.service  restart.service  watcher.service  watcher.timer
scripts/systemd/: boot.service
server/: Cargo.toml  Dockerfile  README.md
server/src/: custom.rs  main.rs  server.rs  sms.rs  staticfile.rs  util.rs  utils.rs  watcher.rs
source/: 4xx.html  5xx.html  index.html
source/assets/: main.js
source/assets/scripts/: main.js
source/assets/stylesheets/: error.css  handheld.css  main-handheld.css  main-screen.css  screen.css
source/resume/: index.html
source/resume/stylesheets/: handheld.css  screen.css
source/stylesheets/: handheld.css  screen.css
