[package]
name = "server"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.4"
env_logger = "0.7"
futures = "0.3"
http = "0.1"
http-service = "0.4"
httpdate = "0.3"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
mime_guess = "2.0.1"
notify = "4.0"
percent-encoding = "2.1"
reqwest = "0.9"
runtime = "0.3.0-alpha.8"
runtime-tokio = "0.3.0-alpha.6"
rusoto_core = "0.42.0"
rusoto_credential = "0.42.0"
rusoto_sns = "0.42.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tide = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
