[package]
name = "server"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.6", features = ["attributes"] }
async-trait = "0.1"
chrono = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.11"
futures = "0.3"
http = "1.1"
httpdate = "1.0"
http-types = "2.10"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
notify = "4"
percent-encoding = "2.3"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_sns = "0.48"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tide = { version = "0.16", default-features = false, features = ["h1-server", "cookies", "sessions"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
